--- a/components/plasmic/daply_landing/PlasmicBlogCardLeft.module.css
+++ b/components/plasmic/daply_landing/PlasmicBlogCardLeft.module.css
@@ -47,6 +47,11 @@
   min-height: 0;
   padding: 0px;
 }
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__qiXzd {
+    display: none;
+  }
+}
 .freeBoxleftImage2NoImage__qiXzdcH2Hj {
   display: none;
 }
@@ -76,6 +81,11 @@
 }
 .img__rjfY > picture > img {
   object-fit: cover;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .img__rjfY {
+    display: none !important;
+  }
 }
 .imgleftImage2NoImage__rjfYcH2Hj {
   object-fit: cover;
