--- a/components/plasmic/daply_landing/PlasmicValueProp.module.css
+++ b/components/plasmic/daply_landing/PlasmicValueProp.module.css
@@ -2,7 +2,11 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  box-shadow: 0px 5px 8px 0px #0000001c;
+  box-shadow: none;
+  transition-property: all;
+  transition-duration: 0.5s;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
   border-radius: 8px;
   padding: 15px;
   border: 1px none var(--token-pyhDq7s0RTkz);
@@ -47,12 +51,20 @@
   border-radius: 16px;
   padding: 24px;
 }
+.rootcolored {
+  border: 3px solid var(--token-EE1ua_Hy5Lub);
+}
+.root:hover {
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.2);
+  background: #fafafa;
+  border: 3px solid var(--token-rvqSfmjWOZ82);
+}
 .iconContainer {
   display: flex;
   flex-direction: row;
   align-items: stretch;
   justify-content: flex-start;
-  background: var(--token-54Zu1jSXOFgl);
+  background: var(--token-EE1ua_Hy5Lub);
   border-radius: 8px;
   padding: 8px;
 }
